# control-jobs

./: .gitignore  README.md  docker-compose.yml  padrao-commit.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/pages/: index.js  (+2 more)
jobscontrol/: .gitignore  Dockerfile  app.py  config.py  database.db  main.py  manage.py  models.py  pyproject.toml  requirements.txt  routes.py
jobscontrol/adapters/persistence/: job_repository_impl.py  models.py
jobscontrol/adapters/web/: job_routes.py
jobscontrol/api/: models.py  schemas.py  urls.py  views.py
jobscontrol/app/: __init__.py  database.py  main.py  models.py
jobscontrol/app/forms/: job.py
jobscontrol/app/models/: job.py
jobscontrol/app/routes/: get_job.py  job_create.py  jobs.py
jobscontrol/app/views/: job.py
jobscontrol/config/: config.py
jobscontrol/core/domain/: job.py
jobscontrol/core/ports/: job_repository.py
jobscontrol/core/services/: job_service.py
jobscontrol/database/: database.py
jobscontrol/jobs/: forms.py  models.py  urls.py  views.py
jobscontrol/jobs/migrations/: 0001_initial.py  0002_remove_job_date.py  0003_job_date.py
jobscontrol/jobs/static/css/: create_job.css  delete_job.css  list_jobs.css  update_job.css
jobscontrol/jobs/static/js/: utils.js
jobscontrol/jobs/templates/jobs/: confirm_delete_job.html  create_job.html  delete_job.html  job_form.html  list_jobs.html  update_job.html
jobscontrol/jobscontrol/: asgi.py  settings.py  urls.py  wsgi.py
jobscontrol/tests/: test_create_job.py  test_delete_job.py  test_get_job.py  test_update_job.py
(+2 files in other folders)
